apps/base/atuin/deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: atuin
  namespace: atuin
  labels:
    app.kubernetes.io/component: service
    app.kubernetes.io/name: atuin
spec:
  selector:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: atuin
  ports:
    - name: atuin
      port: 8888
      targetPort: atuin
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atuin
  namespace: atuin
  labels:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: atuin
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: app
      app.kubernetes.io/name: atuin
  template:
    metadata:
      labels:
        app.kubernetes.io/component: app
        app.kubernetes.io/name: atuin
    spec:
      nodeAffinity:
    required:
      nodeSelectorTerms:
        - matchExpressions:
            - key: kubernetes.io/hostname
              operator: In
              values:
                - minas-tirith
                - minas-tirith-vm
      containers:
        - name: atuin
          image: ghcr.io/atuinsh/atuin:latest
          imagePullPolicy: Always
          args:
            - server
            - start
          ports:
            - name: atuin
              containerPort: 8888
          resources:
            limits:
              cpu: 250m
              memory: 1Gi
            requests:
              cpu: 250m
              memory: 1Gi
          volumeMounts:
            - mountPath: /config
              name: atuin-pvc
      volumes:
        - name: atuin-pvc
          persistentVolumeClaim:
            claimName: atuin-pvc
